# byte-order

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: byte_order-config.cmake.in
examples/: CMakeLists.txt  example.cpp
include/byte_order/: Codec.hpp  Codec.inl  SwapBytes.hpp  SwapBytes.inl
tests/: ByteOrderTests.cpp  CMakeLists.txt  CodecTests.cpp  SwapBytesTests.cpp
tools/: CMakeLists.txt  generate_byte_order_header.cpp
tools/etc/: ByteOrder.hpp.in
